--- a/.ado/templates/build-rnw.yml
+++ b/.ado/templates/build-rnw.yml
@@ -56,6 +56,7 @@ steps:
         /p:PlatformToolset=${{parameters.platformToolset}}
         /p:BaseIntDir=$(BaseIntDir)
         /p:PublishToolDuringBuild=true
+        /p:EnableSourceLink=true
         /bl:${{ parameters.BuildLogDirectory }}\MsBuild.binlog
         /flp1:errorsonly;logfile=${{ parameters.BuildLogDirectory }}\MsBuild.err
         /flp2:warningsonly;logfile=${{ parameters.BuildLogDirectory }}\MsBuild.wrn
