--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -31,13 +31,13 @@
     "invariant": "^2.2.4",
     "nullthrows": "^1.1.0",
     "pretty-format": "^24.7.0",
-    "promise": "^7.1.1",
+    "promise": "^8.0.3",
     "prop-types": "^15.7.2",
     "react-clone-referenced-element": "^1.0.1",
-    "react-devtools-core": "^4.0.6",
+    "react-devtools-core": "^4.6.0",
     "react-refresh": "^0.4.0",
     "regenerator-runtime": "^0.13.2",
-    "scheduler": "0.14.0",
+    "scheduler": "0.19.1",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
     "whatwg-fetch": "^3.0.0"
@@ -51,19 +51,20 @@
     "@types/prop-types": "15.5.1",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
+    "babel-eslint": "10.0.1",
     "eslint": "6.7.0",
-    "flow-bin": "^0.120.1",
-    "jscodeshift": "^0.6.2",
+    "flow-bin": "^0.122.0",
+    "jscodeshift": "^0.7.0",
     "just-scripts": "^0.36.1",
     "react": "16.13.0",
-    "react-native": "0.0.0-56cf99a96",
+    "react-native": "0.0.0-4a48b021d",
     "react-native-platform-override": "^0.2.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
-    "react-native": "0.0.0-56cf99a96"
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "0.0.0-4a48b021d"
   },
   "beachball": {
     "defaultNpmTag": "canary",
