--- a/vnext/PropertySheets/WinUI.props
+++ b/vnext/PropertySheets/WinUI.props
@@ -6,7 +6,7 @@
 
   <PropertyGroup Label="WinUI3 versioning">
     <!-- This value is also used by the CLI, see \vnext\local-cli\src\generator-windows\index.ts -->
-    <WinUI3Version>3.0.0-preview2.200713.0</WinUI3Version>
+    <WinUI3Version>3.0.0-development.200706.1-CI</WinUI3Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(UseWinUI3)'=='true'">
     <WinUIPackageName>Microsoft.WinUI</WinUIPackageName>
@@ -31,10 +31,14 @@
     <!-- Enlighten C++ code about WinUI3 -->
     <ClCompile>
       <PreprocessorDefinitions>USE_WINUI3;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <!-- Preview 2 will need experimental types due to IXP -->
+      <PreprocessorDefinitions>ENABLE_WINRT_EXPERIMENTAL_TYPES=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <!-- Enlighten IDL interfaces about WinUI3 -->
     <Midl>
       <PreprocessorDefinitions>USE_WINUI3;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <!-- Preview 2 will need experimental types due to IXP -->
+      <PreprocessorDefinitions>ENABLE_WINRT_EXPERIMENTAL_TYPES=1;DISABLE_MIDL_VERSION_CHECKS=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </Midl>
   </ItemDefinitionGroup>
 
