--- a/packages/@react-native-windows/cli/package.json
+++ b/packages/@react-native-windows/cli/package.json
@@ -16,16 +16,21 @@
     "watch": "just-scripts watch"
   },
   "dependencies": {
-    "@react-native-windows/generator-common": "0.0.0-canary.0",
-    "@react-native-windows/project-utils": "0.0.0-canary.0",
     "chalk": "^3.0.0",
     "cli-spinners": "^2.2.0",
     "envinfo": "^7.5.0",
     "glob": "^7.1.1",
+    "inquirer": "^3.0.6",
+    "mustache": "^4.0.1",
     "nuget-exe": "4.9.2",
     "ora": "^3.4.0",
+    "semver": "^7.1.3",
     "shelljs": "^0.7.8",
-    "xml-parser": "^1.2.1"
+    "username": "^5.1.0",
+    "uuid": "^3.3.2",
+    "xmldom": "^0.3.0",
+    "xml-parser": "^1.2.1",
+    "xpath": "^0.0.27"
   },
   "devDependencies": {
     "@react-native-community/cli-types": "^4.10.1",
@@ -33,8 +38,13 @@
     "@rnw-scripts/just-task": "0.0.2",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/chalk": "^2.2.0",
+    "@types/inquirer": "^6.5.0",
+    "@types/mustache": "^4.0.1",
     "@types/ora": "^3.2.0",
+    "@types/semver": "^7.3.1",
     "@types/shelljs": "^0.8.8",
+    "@types/uuid": "^8.0.0",
+    "@types/xmldom": "^0.1.29",
     "@types/xml-parser": "^1.2.29",
     "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
