--- a/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.CppLib.targets
+++ b/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.CppLib.targets
@@ -10,7 +10,7 @@
   <ItemGroup Condition="'$(UseExperimentalNuget)' == 'false'">
     <ProjectReference Include="$(ReactNativeWindowsDir)\Microsoft.ReactNative\Microsoft.ReactNative.vcxproj">
       <Project>{f7d32bd0-2749-483e-9a0d-1635ef7e3136}</Project>
-      <Private>true</Private>
+      <Private>false</Private>
     </ProjectReference>
   </ItemGroup>
   <Target Name="Deploy" />
