--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -285,9 +285,11 @@ jobs:
         X64Release:
           BuildConfiguration: Release
           BuildPlatform: x64
-        #X86Debug:
-        #  BuildConfiguration: Debug
-        #  BuildPlatform: x86
+          NoDeployOption:
+        X86Debug:
+         BuildConfiguration: Debug
+         BuildPlatform: x86
+         NoDeployOption:
         #X86Release:
         #  BuildConfiguration: Release
         #  BuildPlatform: x86
@@ -297,6 +299,7 @@ jobs:
         ArmRelease:
           BuildConfiguration: Release
           BuildPlatform: ARM
+          NoDeployOption: --no-deploy
         #Arm64Debug:
         #  BuildConfiguration: Debug
         #  BuildPlatform: ARM64
@@ -328,14 +331,14 @@ jobs:
       - task: CmdLine@2
         displayName: run-windows (Debug)
         inputs:
-          script: yarn windows --no-packager --no-launch --arch $(BuildPlatform) --logging --buildLogDirectory $(BuildLogDirectory) --msbuildprops BaseIntDir=$(BaseIntDir)
+          script: yarn windows --no-packager --no-launch $(NoDeployOption) --arch $(BuildPlatform) --logging --buildLogDirectory $(BuildLogDirectory) --msbuildprops BaseIntDir=$(BaseIntDir)
           workingDirectory: packages/microsoft-reactnative-sampleapps
         condition: and(succeeded(), eq(variables['BuildConfiguration'], 'Debug'))
 
       - task: CmdLine@2
         displayName: run-windows (Release)
         inputs:
-          script: yarn windows --no-packager --no-launch --arch $(BuildPlatform) --logging --buildLogDirectory $(BuildLogDirectory) --release --msbuildprops BaseIntDir=$(BaseIntDir)
+          script: yarn windows --no-packager --no-launch $(NoDeployOption) --arch $(BuildPlatform) --logging --buildLogDirectory $(BuildLogDirectory) --release --msbuildprops BaseIntDir=$(BaseIntDir)
           workingDirectory: packages/microsoft-reactnative-sampleapps
         condition: and(succeeded(), eq(variables['BuildConfiguration'], 'Release'))
 
@@ -525,11 +528,13 @@ jobs:
           configuration: Release
           platform: arm
           additionalInitArguments:
+          additionalRunArguments: --no-deploy
         ArmReleaseCs:
           language: cs
           configuration: Release
           platform: arm
           additionalInitArguments:
+          additionalRunArguments: --no-deploy
         #Arm64DebugCpp:
         #  language: cpp
         #  configuration: Debug
@@ -569,6 +574,7 @@ jobs:
           platform: $(platform)
           version: $(reactNativeVersion)
           additionalInitArguments: $(additionalInitArguments)
+          additionalRunArguments: $(additionalRunArguments)
 
   - job: CliInitExperimental
     displayName: Verify react-native init experimental
