--- a/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.CSharpApp.targets
+++ b/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.CSharpApp.targets
@@ -18,11 +18,11 @@
   <Import Project="$(ProjectDir)\AutolinkedNativeModules.g.targets"
           Condition="Exists('$(ProjectDir)\AutolinkedNativeModules.g.targets')" />
 
-  <Import Project="$(MSBuildProjectDirectory)\$(OutputPath)\$(AssemblyName).Build.appxrecipe"  
-          Condition="Exists('$(MSBuildProjectDirectory)\$(OutputPath)\$(AssemblyName).Build.appxrecipe') And '$(DeployLayout)'=='true'" />
+  <Import Project="$(AppxPackageRecipe)"  
+          Condition="Exists('$(AppxPackageRecipe)') And '$(DeployLayout)'=='true'" />
   <Target Name="Deploy" Condition="'$(DeployLayout)'=='true'">
-    <Error Condition="!Exists('$(MSBuildProjectDirectory)\$(OutputPath)\$(AssemblyName).Build.appxrecipe')" 
-           Text="You must first build the project before deploying it. Did not find: $(MSBuildProjectDirectory)\$(OutputPath)\$(AssemblyName).Build.appxrecipe" />
+    <Error Condition="!Exists('$(AppxPackageRecipe)')" 
+           Text="You must first build the project before deploying it. Did not find: $(AppxPackageRecipe)" />
     <Copy SourceFiles="%(AppxPackagedFile.Identity)" 
           DestinationFiles="$(MSBuildProjectDirectory)\$(OutputPath)Appx\%(AppxPackagedFile.PackagePath)" />
     <Copy SourceFiles="%(AppXManifest.Identity)" 
